# terminal-mail

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  changelog.txt  pyproject.toml
.github/workflows/: ci.yml
examples/: tmail.conf.example
src/tmail/: __init__.py  __main__.py  cli.py  composer.py  config.py  mailer.py  message.py
tests/: __init__.py  test_cli.py  test_composer.py  test_config.py  test_mailer.py  test_message.py
